--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
             <div>
                 <h3>HOME</h3>
                 <div class="score-box"><h4 class="score" id="home-score">0</h4></div>
-                <button onclick="incrementOne()">+1</button>
-                <button onclick="incrementTwo()">+2</button>
-                <button onclick="incrementThree()">+3</button>
+                <button onclick="incrementHomeOne()">+1</button>
+                <button onclick="incrementHomeTwo()">+2</button>
+                <button onclick="incrementHomeThree()">+3</button>
             </div>
             <div>
                 <h3>VISITOR</h3>
                 <div class="score-box"><h4 class="score" id="visitor-score">0</h4></div>
-                <button onclick="incrementOne()">+1</button>
-                <button onclick="incrementTwo()">+2</button>
-                <button onclick="incrementThree()">+3</button>
+                <button onclick="incrementVisitorOne()">+1</button>
+                <button onclick="incrementVisitorTwo()">+2</button>
+                <button onclick="incrementVisitorThree()">+3</button>
             </div>
         </div>
         <script src="index.js"></script>
