--- a/index.html
+++ b/index.html
@@ -12,16 +12,20 @@
             <div>
                 <h3>HOME</h3>
                 <div class="score-box"><h4 class="score" id="home-score">0</h4></div>
-                <button onclick="incrementHomeOne()">+1</button>
-                <button onclick="incrementHomeTwo()">+2</button>
-                <button onclick="incrementHomeThree()">+3</button>
+                <div class="btn-container">
+                    <button class="btn" onclick="incrementHomeOne()">+1</button>
+                    <button class="btn" onclick="incrementHomeTwo()">+2</button>
+                    <button class="btn" onclick="incrementHomeThree()">+3</button>
+                </div>
             </div>
             <div>
                 <h3>VISITOR</h3>
                 <div class="score-box"><h4 class="score" id="visitor-score">0</h4></div>
-                <button onclick="incrementVisitorOne()">+1</button>
-                <button onclick="incrementVisitorTwo()">+2</button>
-                <button onclick="incrementVisitorThree()">+3</button>
+                <div class="btn-container">
+                    <button class="btn" onclick="incrementVisitorOne()">+1</button>
+                    <button class="btn" onclick="incrementVisitorTwo()">+2</button>
+                    <button class="btn" onclick="incrementVisitorThree()">+3</button>
+                </div>
             </div>
         </div>
         <script src="index.js"></script>
