--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                     <button class="btn" onclick="incrementHomeThree()">+3</button>
                 </div>
             </div>
+            <div id="reset-container">
+                <button id="reset-btn" onclick="reset()">Reset</button>
+            </div>
             <div>
                 <h3>VISITOR</h3>
                 <div class="score-box"><h4 class="score" id="visitor-score">0</h4></div>
